test/expected/emc-error.out
cdecl> explain long long _Accum x
               ^
3,9: error: "long long _Accum" is illegal for built-in type
cdecl> explain long long _Fract x
               ^
4,9: error: "long long _Fract" is illegal for built-in type
cdecl> explain _Sat x
               ^
5,9: error: "_Sat" requires either "_Accum" or "_Fract"
cdecl> explain _Sat int x
               ^
6,9: error: "_Sat" requires either "_Accum" or "_Fract"
